--- a/public/index.html
+++ b/public/index.html
@@ -337,10 +337,6 @@
             <a href="video.html" class="footer-link">Video Suggestion</a>
           </li>
 
-          <li>
-            <a href="purchase.html" class="footer-link">Purchase Guide</a>
-          </li>
-
         </ul>
 
         <ul class="footer-list">
@@ -396,31 +392,23 @@
           <ul class="social-list">
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://www.linkedin.com/in/apoorwa-kumar-479461302/" class="social-link">
                 <ion-icon name="logo-linkedin"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://www.instagram.com/apoorwa466/" class="social-link" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://x.com/apoorwa466" class="social-link">
                 <ion-icon name="logo-twitter"></ion-icon>
               </a>
             </li>
-
-            <li>
-              <a href="#" class="social-link">
-                <ion-icon name="logo-youtube"></ion-icon>
-              </a>
-            </li>
-
           </ul>
-
         </div>
 
       </div>
