--- a/public/qna.html
+++ b/public/qna.html
@@ -165,175 +165,158 @@
 
 
 
-            <footer class="footer" style="background-image: url('./assets/images/footer-bg.png')" id="footer-contacts">
+  <footer class="footer" style="background-image: url('./assets/images/footer-bg.png')" id="footer-contacts">
 
-                <div class="footer-top section">
-                    <div class="container grid-list">
+    <div class="footer-top section">
+      <div class="container grid-list">
 
-                        <div class="footer-brand">
+        <div class="footer-brand">
 
-                            <a href="#" class="logo">
-                                <img src="./assets/images/logo.png" width="162" height="50" alt="StudyAID logo">
-                            </a>
+          <a href="#" class="logo">
+            <img src="./assets/images/logo.png" width="162" height="50" alt="StudyAID logo">
+          </a>
 
-                            <p class="footer-brand-text">
-                                StudyAID is an online platform designed to help students excel in their studies. Access
-                                Q&A, generate summaries, and get curated video suggestions—all in one place.
-                            </p>
+          <p class="footer-brand-text">
+            StudyAID is an online platform designed to help students excel in their studies. Access Q&A, generate summaries, and get curated video suggestions—all in one place.
+          </p>
 
-                            <div class="wrapper">
-                                <span class="span">Add:</span>
+          <div class="wrapper">
+            <span class="span">Add:</span>
 
-                                <address class="address">India</address>
-                            </div>
+            <address class="address">India</address>
+          </div>
 
-                            <div class="wrapper">
-                                <span class="span">Call:</span>
+          <div class="wrapper">
+            <span class="span">Call:</span>
 
-                                <a href="tel:+011234567890" class="footer-link">+01 123 4567 890</a>
-                            </div>
+            <a href="tel:+011234567890" class="footer-link">+01 123 4567 890</a>
+          </div>
 
-                            <div class="wrapper">
-                                <span class="span">Email:</span>
+          <div class="wrapper">
+            <span class="span">Email:</span>
 
-                                <a href="mailto:info@eduweb.com" class="footer-link">apoorwa466@gmail.com</a>
-                            </div>
+            <a href="mailto:info@eduweb.com" class="footer-link">apoorwa466@gmail.com</a>
+          </div>
 
-                        </div>
+        </div>
 
-                        <ul class="footer-list">
+        <ul class="footer-list">
 
-                            <li>
-                                <p class="footer-list-title">Online Platform</p>
-                            </li>
+          <li>
+            <p class="footer-list-title">Online Platform</p>
+          </li>
 
-                            <li>
-                                <a href="#nav-bar" class="footer-link">About</a>
-                            </li>
+          <li>
+            <a href="#nav-bar" class="footer-link">About</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">Courses</a>
-                            </li>
+          <li>
+            <a href="#nav-bar" class="footer-link">Features</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">Instructor</a>
-                            </li>
+          <li>
+            <a href="qna.html" class="footer-link">QnA</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">Events</a>
-                            </li>
+          <li>
+            <a href="summary.html" class="footer-link">Summarizer</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">Instructor Profile</a>
-                            </li>
+          <li>
+            <a href="video.html" class="footer-link">Video Suggestion</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">Purchase Guide</a>
-                            </li>
+        </ul>
 
-                        </ul>
+        <ul class="footer-list">
 
-                        <ul class="footer-list">
+          <li>
+            <p class="footer-list-title">Links</p>
+          </li>
 
-                            <li>
-                                <p class="footer-list-title">Links</p>
-                            </li>
+          <li>
+            <a href="#footer-contacts" class="footer-link">Contact Us</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">Contact Us</a>
-                            </li>
+          <li>
+            <a href="#" class="footer-link">Gallery</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">Gallery</a>
-                            </li>
+          <li>
+            <a href="#" class="footer-link">News & Articles</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">News & Articles</a>
-                            </li>
+          <li>
+            <a href="#" class="footer-link">FAQ's</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">FAQ's</a>
-                            </li>
+          <li>
+            <a href="#" class="footer-link">Sign In/Registration</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">Sign In/Registration</a>
-                            </li>
+          <li>
+            <a href="#" class="footer-link">Coming Soon</a>
+          </li>
 
-                            <li>
-                                <a href="#" class="footer-link">Coming Soon</a>
-                            </li>
+        </ul>
 
-                        </ul>
+        <div class="footer-list">
 
-                        <div class="footer-list">
+          <p class="footer-list-title">Contacts</p>
 
-                            <p class="footer-list-title">Contacts</p>
+          <p class="footer-list-text">
+            Enter your email address to register to our newsletter subscription
+          </p>
 
-                            <p class="footer-list-text">
-                                Enter your email address to register to our newsletter subscription
-                            </p>
+          <form action="" class="newsletter-form">
+            <input type="email" name="email_address" placeholder="Your email" required class="input-field">
 
-                            <form action="" class="newsletter-form">
-                                <input type="email" name="email_address" placeholder="Your email" required
-                                    class="input-field">
+            <button type="submit" class="btn has-before">
+              <span class="span">Subscribe</span>
 
-                                <button type="submit" class="btn has-before">
-                                    <span class="span">Subscribe</span>
+              <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+            </button>
+          </form>
 
-                                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                                </button>
-                            </form>
+          <ul class="social-list">
 
-                            <ul class="social-list">
+            <li>
+              <a href="https://www.linkedin.com/in/apoorwa-kumar-479461302/" class="social-link">
+                <ion-icon name="logo-linkedin"></ion-icon>
+              </a>
+            </li>
 
-                                <li>
-                                    <a href="#" class="social-link">
-                                        <ion-icon name="logo-facebook"></ion-icon>
-                                    </a>
-                                </li>
+            <li>
+              <a href="https://www.instagram.com/apoorwa466/" class="social-link" target="_blank">
+                <ion-icon name="logo-instagram"></ion-icon>
+              </a>
+            </li>
 
-                                <li>
-                                    <a href="#" class="social-link">
-                                        <ion-icon name="logo-linkedin"></ion-icon>
-                                    </a>
-                                </li>
+            <li>
+              <a href="https://x.com/apoorwa466" class="social-link">
+                <ion-icon name="logo-twitter"></ion-icon>
+              </a>
+            </li>
 
-                                <li>
-                                    <a href="#" class="social-link">
-                                        <ion-icon name="logo-instagram"></ion-icon>
-                                    </a>
-                                </li>
+          </ul>
 
-                                <li>
-                                    <a href="#" class="social-link">
-                                        <ion-icon name="logo-twitter"></ion-icon>
-                                    </a>
-                                </li>
+        </div>
 
-                                <li>
-                                    <a href="#" class="social-link">
-                                        <ion-icon name="logo-youtube"></ion-icon>
-                                    </a>
-                                </li>
+      </div>
+    </div>
 
-                            </ul>
+    <div class="footer-bottom">
+      <div class="container">
 
-                        </div>
+        <p class="copyright">
+          Copyright 2025 All Rights Reserved by <a href="#" class="copyright-link">Apoorwa Kumar</a>
+        </p>
 
-                    </div>
-                </div>
+      </div>
+    </div>
 
-                <div class="footer-bottom">
-                    <div class="container">
+  </footer>
 
-                        <p class="copyright">
-                            Copyright 2025 All Rights Reserved by <a href="#" class="copyright-link">Apoorwa Kumar</a>
-                        </p>
-
-                    </div>
-                </div>
-
-            </footer>
 
 
 
